# d365_next

d365_next/: README.md  package-lock.json  package.json
d365_next/.claude/: settings.local.json
d365_next/src/app/: layout.tsx  page.tsx
d365_next/src/components/: dashboard-header.tsx  dashboard-skeleton.tsx  incident-table.tsx  owner-table.tsx  summary-cards.tsx  theme-toggle.tsx
d365_next/src/lib/: d365.ts
d365_next/src/types/: httpntlm.d.ts
kpi_sokuho/: .env.example  .gitignore  DESIGN.md  pyproject.toml
kpi_sokuho/scripts/: smoke.py
kpi_sokuho/src/: config.py  ctstage.py  main.py  parse.py  store.py
scrape/: .gitignore  README.md  config.py  main.py  pyproject.toml
shift_test/: package-lock.json  package.json  screen_design.md  shift_database_schema_v9.md
shift_test/.claude/: settings.local.json
shift_test/prisma/: schema.prisma
shift_test/prisma/migrations/20260216204756_init/: migration.sql
shift_test/prisma/migrations/20260217000000_add_triggers_and_constraints/: migration.sql
shift_test/src/app/: layout.tsx  page.tsx
shift_test/src/app/employees/: page.tsx
shift_test/src/app/groups/: page.tsx
shift_test/src/app/shifts/: page.tsx
shift_test/src/components/common/: confirm-dialog.tsx  page-header.tsx  role-type-badge.tsx  search-input.tsx  status-badge.tsx
shift_test/src/components/employees/: employee-basic-info-form.tsx  employee-create-dialog.tsx  employee-filters.tsx  employee-name-history.tsx  employee-role-manager.tsx  employee-table.tsx  name-change-dialog.tsx  name-history-edit-dialog.tsx  role-assign-dialog.tsx  (+1 more)
(+32 files in other folders)
